# TanStack_project

./: .env  01.baic.ipynb  02.lab2.ipynb  03.tools.ipynb  04.agent.ipynb  README.md  email.txt  emails.txt  ide.html  main.ipynb  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
linear_gen_ai/: index.html  script.js  style.css
src/my_agent/: agent.py
