[project]
name = "tanstack-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.13",
    "langchain-core>=1.4.9",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "langsmith>=0.10.2",
]
