[project]
name = "tanstack-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gradio>=6.20.0",
    "ipykernel>=7.3.0",
    "langchain>=1.3.13",
    "ollama>=0.6.2",
    "openai>=2.46.0",
    "pdfreader>=0.1.15",
    "prettier>=0.0.7",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.22",
]
